--- a/Lua/cosmo/build
+++ b/Lua/cosmo/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf v$VERSION.tar.gz
+gzip -d v$VERSION.tar.gz | tar -x
 
 install -Dm644 cosmo-$VERSION/src/cosmo.lua "$DESTDIR/usr/share/lua/cosmo.lua"
 cp -r          cosmo-$VERSION/src/cosmo     "$DESTDIR/usr/share/lua"
