--- a/Archive/bzip2/build
+++ b/Archive/bzip2/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf bzip2-$VERSION.tar.gz
+gzip -d bzip2-$VERSION.tar.gz | tar -x
 cd bzip2-$VERSION
 
 make CC="$CC $CFLAGS $LDFLAGS" -f Makefile-libbz2_so
