--- a/Fonts/ttf-twemoji-color/build
+++ b/Fonts/ttf-twemoji-color/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf TwitterColorEmoji-SVGinOT-Linux-$VERSION.tar.gz
+gzip TwitterColorEmoji-SVGinOT-Linux-$VERSION.tar.gz | tar -x
 cd TwitterColorEmoji-SVGinOT-Linux-$VERSION
 
 install -Dm644 -t "$DESTDIR/usr/share/fonts/TTF" TwitterColorEmoji-SVGinOT.ttf
