--- a/Lua/lua-cldr/build
+++ b/Lua/lua-cldr/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf v$VERSION.tar.gz
+gzip -d v$VERSION.tar.gz | tar -x
 
 install -Dm644 -t "$DESTDIR/usr/share/lua/cldr"      cldr-lua-$VERSION/cldr/init.lua
 install -Dm644 -t "$DESTDIR/usr/share/lua/cldr/data" cldr-lua-$VERSION/cldr/data/locales.lua
