--- a/Lua/lua-epnf/build
+++ b/Lua/lua-epnf/build
@@ -1,5 +1,5 @@
 #!/bin/sh -e
 
-tar -xf v$VERSION.tar.gz 
+gzip -d v$VERSION.tar.gz | tar -x
 
 install -Dm644 -t "$DESTDIR/usr/share/lua" lua-luaepnf-$VERSION/src/epnf.lua
