--- a/Lua/lua-filesystem/build
+++ b/Lua/lua-filesystem/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf v$VERSION.tar.gz
+gzip -d v$VERSION.tar.gz | tar -x
 cd luafilesystem-$VERSION
 
 export CFLAGS="$CFLAGS -pedantic"
