--- a/Lua/lua-zlib/build
+++ b/Lua/lua-zlib/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf v$VERSION.tar.gz
+gzip -d v$VERSION.tar.gz | tar -x
 cd lua-zlib-$VERSION
 
 $CC -fPIC $CFLAGS -o zlib.out -c lua_zlib.c
