--- a/Lua/penlight/build
+++ b/Lua/penlight/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf $VERSION.tar.gz
+gzip -d $VERSION.tar.gz | tar -x
 
 mkdir -p "$DESTDIR/usr/share/lua"
 cp -r Penlight-$VERSION/lua/pl "$DESTDIR/usr/share/lua" 
