--- a/Python/setuptools/build
+++ b/Python/setuptools/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf v$VERSION.tar.gz
+gzip -d v$VERSION.tar.gz | tar -x
 cd setuptools-$VERSION
 
 # Useful trick for boostrapping setuptools
