--- a/Wayland/xkeyboard-config/build
+++ b/Wayland/xkeyboard-config/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-tar -xf xkeyboard-config-$VERSION.tar.xz
+xz -d xkeyboard-config-$VERSION.tar.xz | tar -x
 cd xkeyboard-config-$VERSION
 
 sed -i "s/subdir('po')//g" meson.build
