--- a/Base/skalibs/build
+++ b/Base/skalibs/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d skalibs-$VERSION.tar.gz | tar -x
+gzip -cd skalibs-$VERSION.tar.gz | tar -x
 cd skalibs-$VERSION
 
 ./configure \
