--- a/Devel/make/build
+++ b/Devel/make/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d make-$VERSION.tar.gz | tar -x
+gzip -cd make-$VERSION.tar.gz | tar -x
 cd make-$VERSION
 
 export LDFLAGS="$LDFLAGS -static"
