--- a/Devel/patch/build
+++ b/Devel/patch/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d v$VERSION.tar.gz | tar -x
+gzip -cd v$VERSION.tar.gz | tar -x
 cd ccore-$VERSION/src/openbsd/patch
 cp ../compat.h .
 
