--- a/Fonts/ttf-hack/build
+++ b/Fonts/ttf-hack/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d Hack-v$VERSION-ttf.tar.gz | tar -x
+gzip -cd Hack-v$VERSION-ttf.tar.gz | tar -x
 
 mkdir -p "$DESTDIR/usr/share/fonts/TTF"
 cp ttf/*.ttf "$DESTDIR/usr/share/fonts/TTF"
