--- a/Fs/e2fsprogs/build
+++ b/Fs/e2fsprogs/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-xz -d e2fsprogs-$VERSION.tar.xz | tar -x
+xz -cd e2fsprogs-$VERSION.tar.xz | tar -x
 cd e2fsprogs-$VERSION
 
 ./configure \
