--- a/Lua/lua-cliargs/build
+++ b/Lua/lua-cliargs/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d v$VERSION.tar.gz | tar -x
+gzip -cd v$VERSION.tar.gz | tar -x
 
 mkdir -p "$DESTDIR/usr/share/lua"
 cp -r lua_cliargs-$VERSION/src/* "$DESTDIR/usr/share/lua"
