--- a/Lua/lua-utf8/build
+++ b/Lua/lua-utf8/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d $VERSION.tar.gz | tar -x
+gzip -cd $VERSION.tar.gz | tar -x
 cd luautf8-$VERSION
 
 $CC -fPIC $CFLAGS -o lua-utf8.out -c lutf8lib.c
