--- a/Net/iproute2/build
+++ b/Net/iproute2/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-xz -d iproute2-$VERSION.tar.xz | tar -x
+xz -cd iproute2-$VERSION.tar.xz | tar -x
 cd iproute2-$VERSION
 
 # From upstream. Will be removed on next version
