--- a/Python/mako/build
+++ b/Python/mako/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d Mako-$VERSION.tar.gz | tar -x
+gzip -cd Mako-$VERSION.tar.gz | tar -x
 cd Mako-$VERSION
 
 python setup.py build
