--- a/System/tzdata/build
+++ b/System/tzdata/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d $VERSION.tar.gz | tar -x
+gzip -cd $VERSION.tar.gz | tar -x
 cd tz-$VERSION
 
 sed -i 's|sbin|bin|g' Makefile
