--- a/Text/grep/build
+++ b/Text/grep/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-xz -d grep-$VERSION.tar.xz | tar -x
+xz -cd grep-$VERSION.tar.xz | tar -x
 cd grep-$VERSION
 
 export CFLAGS="$CFLAGS -Wno-error -static"
