--- a/Wayland/libinput/build
+++ b/Wayland/libinput/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-gzip -d libinput-$VERSION.tar.gz | tar -x
+gzip -cd libinput-$VERSION.tar.gz | tar -x
 cd libinput-$VERSION
 
 meson setup \
