--- a/Wayland/wayland/build
+++ b/Wayland/wayland/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-xz -d wayland-$VERSION.tar.xz | tar -x
+xz -cd wayland-$VERSION.tar.xz | tar -x
 cd wayland-$VERSION
 
 meson setup \
