--- a/Lua/lpeg/build
+++ b/Lua/lpeg/build
@@ -10,3 +10,7 @@ make
 install -Dm644 lpeg.so "$DESTDIR/usr/lib/lua/lpeg.so"
 install -Dm644 lpeg.a  "$DESTDIR/usr/lib/lua/lpeg.a"
 install -Dm644 re.lua  "$DESTDIR/usr/share/lua/re.lua"
+
+su
+chown -R root:root $DESTDIR
+exit
