--- a/Wayland/libevdev/build
+++ b/Wayland/libevdev/build
@@ -10,3 +10,7 @@ make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share/man/man3"
 find $DESTDIR -type f -name '*.la' -delete
+
+su
+chown -R root:root $DESTDIR
+exit
