--- a/Base/ubase/build
+++ b/Base/ubase/build
@@ -31,3 +31,7 @@ rm "$DESTDIR/usr/share/man/man8/umount.8"
 rm "$DESTDIR/usr/share/man/man1/mountpoint.1"
 
 find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
+
+su
+chown -R root:root $DESTDIR
+exit
