--- a/Devel/diff/build
+++ b/Devel/diff/build
@@ -11,3 +11,7 @@ install -Dm755 -t "$DESTDIR/usr/bin" diff
 install -Dm644 -t "$DESTDIR/usr/share/man/man1" diff.1
 
 strip --strip-unneeded "$DESTDIR/usr/bin/diff"
+
+su
+chown -R root:root $DESTDIR
+exit
