--- a/Devel/flex/build
+++ b/Devel/flex/build
@@ -17,3 +17,7 @@ rm -rf "$DESTDIR/usr/share/doc"
 rm -rf "$DESTDIR/usr/share/info"
 
 find $DESTDIR -type f -name '*.la' -delete
+
+su
+chown -R root:root $DESTDIR
+exit
