--- a/Devel/libffi/build
+++ b/Devel/libffi/build
@@ -13,3 +13,7 @@ make install-strip
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
+
+su
+chown -R root:root $DESTDIR
+exit
