--- a/Devel/libmpc/build
+++ b/Devel/libmpc/build
@@ -12,3 +12,7 @@ make DESTDIR="$DESTDIR" install
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
+
+su
+chown -R root:root $DESTDIR
+exit
