--- a/Devel/libmpfr/build
+++ b/Devel/libmpfr/build
@@ -13,3 +13,7 @@ make DESTDIR="$DESTDIR" install
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
+
+su
+chown -R root:root $DESTDIR
+exit
