--- a/Lang/perl/build
+++ b/Lang/perl/build
@@ -49,3 +49,7 @@ rm -rf "$DESTDIR/usr/share/man/man3"
 
 # Fix permissions.
 find "$DESTDIR/usr/lib" -type f -exec chmod 644 {} \;
+
+su
+chown -R root:root $DESTDIR
+exit
