--- a/Lua/cassowary/build
+++ b/Lua/cassowary/build
@@ -3,3 +3,7 @@
 gzip -cd v$VERSION.tar.gz | tar -x
 
 install -Dm644 -t "$DESTDIR/usr/share/lua/cassowary" cassowary.lua-$VERSION/cassowary/init.lua
+
+su
+chown -R root:root $DESTDIR
+exit
