--- a/Lua/loadkit/build
+++ b/Lua/loadkit/build
@@ -3,3 +3,7 @@
 gzip -cd v$VERSION.tar.gz | tar -x
 
 install -Dm644 -t "$DESTDIR/usr/share/lua" loadkit-$VERSION/loadkit.lua
+
+su
+chown -R root:root $DESTDIR
+exit
