--- a/Lua/lua-cldr/build
+++ b/Lua/lua-cldr/build
@@ -4,3 +4,7 @@ gzip -cd v$VERSION.tar.gz | tar -x
 
 install -Dm644 -t "$DESTDIR/usr/share/lua/cldr"      cldr-lua-$VERSION/cldr/init.lua
 install -Dm644 -t "$DESTDIR/usr/share/lua/cldr/data" cldr-lua-$VERSION/cldr/data/locales.lua
+
+su
+chown -R root:root $DESTDIR
+exit
