--- a/Lua/lua-fluent/build
+++ b/Lua/lua-fluent/build
@@ -4,3 +4,7 @@ gzip -cd v$VERSION.tar.gz | tar -x
 
 mkdir -p "$DESTDIR/usr/share/lua" 
 cp -r fluent-lua-$VERSION/fluent "$DESTDIR/usr/share/lua"
+
+su
+chown -R root:root $DESTDIR
+exit
