--- a/Lua/lua-repl/build
+++ b/Lua/lua-repl/build
@@ -5,3 +5,7 @@ gzip -cd $VERSION.tar.gz | tar -x
 mkdir -p "$DESTDIR/usr/share/lua" 
 install -Dm755 lua-repl-$VERSION/rep.lua "$DESTDIR/usr/bin/rep.lua" 
 cp -r          lua-repl-$VERSION/repl    "$DESTDIR/usr/share/lua"
+
+su
+chown -R root:root $DESTDIR
+exit
