--- a/Lua/lua-stdlib/build
+++ b/Lua/lua-stdlib/build
@@ -4,3 +4,7 @@ gzip -cd release-v$VERSION.tar.gz | tar -x
 
 install -Dm644 lua-stdlib-release-v$VERSION/lib/std.lua "$DESTDIR/usr/share/lua/std.lua"
 cp -r          lua-stdlib-release-v$VERSION/lib/std     "$DESTDIR/usr/share/lua"
+
+su
+chown -R root:root $DESTDIR
+exit
