--- a/Lua/lua-zlib/build
+++ b/Lua/lua-zlib/build
@@ -9,3 +9,7 @@ $CC -shared -llua $LDFLAGS -o zlib.so zlib.out -lz
 
 install -Dm644 zlib.so "$DESTDIR/usr/lib/lua/zlib.so"
 install -Dm644 zlib.a  "$DESTDIR/usr/lib/lua/zlib.a"
+
+su
+chown -R root:root $DESTDIR
+exit
