--- a/Lua/vstruct/build
+++ b/Lua/vstruct/build
@@ -7,3 +7,7 @@ mkdir -p "$DESTDIR/usr/share/lua/vstruct"
 cp    vstruct-$VERSION/*.lua "$DESTDIR/usr/share/lua/vstruct"
 cp -r vstruct-$VERSION/ast   "$DESTDIR/usr/share/lua/vstruct"
 cp -r vstruct-$VERSION/io    "$DESTDIR/usr/share/lua/vstruct"
+
+su
+chown -R root:root $DESTDIR
+exit
