--- a/Net/git/build
+++ b/Net/git/build
@@ -29,3 +29,7 @@ make DESTDIR="$DESTDIR" install
 
 mkdir -p "$DESTDIR/usr/share/man"
 tar -xf ../git-manpages-$VERSION.tar.xz -C "$DESTDIR/usr/share/man"
+
+su
+chown -R root:root $DESTDIR
+exit
