--- a/System/expat/build
+++ b/System/expat/build
@@ -15,3 +15,7 @@ make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
+
+su
+chown -R root:root $DESTDIR
+exit
