--- a/System/file/build
+++ b/System/file/build
@@ -17,3 +17,7 @@ make install-strip
 
 rm -rf "$DESTDIR/usr/share/man/man3"
 find $DESTDIR -type f -name '*.la' -delete
+
+su
+chown -R root:root $DESTDIR
+exit
