--- a/System/findutils/build
+++ b/System/findutils/build
@@ -10,3 +10,7 @@ make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share/info"
 rm -rf "$DESTDIR/usr/share/locale"
+
+su
+chown -R root:root $DESTDIR
+exit
