--- a/System/libedit/build
+++ b/System/libedit/build
@@ -15,3 +15,7 @@ make install
 
 find $DESTDIR -type f -name '*.la' -delete
 rm -rf "$DESTDIR/usr/share/man/man3"
+
+su
+chown -R root:root $DESTDIR
+exit
