--- a/System/libressl/build
+++ b/System/libressl/build
@@ -15,3 +15,7 @@ rm -rf "$DESTDIR/usr/share/man"
 find $DESTDIR -type f -name '*.la' -delete
 
 install -Dm644 COPYING "$DESTDIR/usr/share/LICENSES/libressl.license"
+
+su
+chown -R root:root $DESTDIR
+exit
