--- a/System/libudev-zero/build
+++ b/System/libudev-zero/build
@@ -8,3 +8,7 @@ make PREFIX=/usr DESTDIR="$DESTDIR" install
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
+
+su
+chown -R root:root $DESTDIR
+exit
