--- a/Text/mandoc/build
+++ b/Text/mandoc/build
@@ -22,3 +22,7 @@ make
 make base-install
 
 find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \; -exec chmod 755 {} \;
+
+su
+chown -R root:root $DESTDIR
+exit
