--- a/Text/sed/build
+++ b/Text/sed/build
@@ -17,3 +17,7 @@ install -Dm755 -t "$DESTDIR/usr/bin" sed
 install -Dm644 -t "$DESTDIR/usr/share/man/man1" sed.1
 
 strip --strip-unneeded "$DESTDIR/usr/bin/sed"
+
+su
+chown -R root:root $DESTDIR
+exit
