--- a/Wayland/libinput/build
+++ b/Wayland/libinput/build
@@ -23,3 +23,7 @@ meson -C build install -d "$DESTDIR"
 strip --strip-unneeded "$DESTDIR/usr/bin/libinput"
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
+
+su
+chown -R root:root $DESTDIR
+exit
