--- a/Wayland/libxkbcommon/build
+++ b/Wayland/libxkbcommon/build
@@ -24,3 +24,7 @@ find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib/xkbcommon" -type f     -exec strip --strip-unneeded {} \;
 strip --strip-unneeded "$DESTDIR/usr/bin/xkbcli"
+
+su
+chown -R root:root $DESTDIR
+exit
