--- a/Wayland/seatd/build
+++ b/Wayland/seatd/build
@@ -17,3 +17,7 @@ ln -sf /run/runit/supervise.seatd "$DESTDIR/etc/sv/seatd/supervise"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
+
+su
+chown -R root:root $DESTDIR
+exit
