--- a/Devel/libmpc/build
+++ b/Devel/libmpc/build
@@ -15,4 +15,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > libmpc@$VERSION.tar.gz
 exit
