--- a/Fonts/ttf-roboto/build
+++ b/Fonts/ttf-roboto/build
@@ -8,4 +8,5 @@ cp build/*.ttf "$DESTDIR/usr/share/fonts/TTF"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > ttf-roboto@$VERSION.tar.gz
 exit
