--- a/Lang/binutils/build
+++ b/Lang/binutils/build
@@ -34,4 +34,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > binutils@$VERSION.tar.gz
 exit
