--- a/Wayland/libdisplay-info/build
+++ b/Wayland/libdisplay-info/build
@@ -18,4 +18,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > libdisplay-info@$VERSION.tar.gz
 exit
