--- a/Wayland/libevdev/build
+++ b/Wayland/libevdev/build
@@ -13,4 +13,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > libevdev@$VERSION.tar.gz
 exit
