--- a/Archive/bzip2/build
+++ b/Archive/bzip2/build
@@ -30,4 +30,5 @@ ln -sf "libbz2.so.$VERSION" "$DESTDIR/usr/lib/libbz2.so.$MAJOR.$MINOR"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > bzip2@$VERSION.tar.gz
 exit
