--- a/Archive/pigz/build
+++ b/Archive/pigz/build
@@ -17,4 +17,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/pigz"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > pigz@$VERSION.tar.gz
 exit
