--- a/Archive/zlib/build
+++ b/Archive/zlib/build
@@ -16,4 +16,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > zlib@$VERSION.tar.gz
 exit
