--- a/Base/init-scripts/build
+++ b/Base/init-scripts/build
@@ -15,4 +15,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/kpow"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > init-scripts@$VERSION.tar.gz
 exit
