--- a/Base/skeleton/build
+++ b/Base/skeleton/build
@@ -52,4 +52,5 @@ ln -sf /proc/self/mounts "$DESTDIR/etc/mtab"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > skeleton@$VERSION.tar.gz
 exit
