--- a/Base/ubase/build
+++ b/Base/ubase/build
@@ -34,4 +34,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > ubase@$VERSION.tar.gz
 exit
