--- a/Devel/bc/build
+++ b/Devel/bc/build
@@ -17,4 +17,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > bc@$VERSION.tar.gz
 exit
