--- a/Devel/diff/build
+++ b/Devel/diff/build
@@ -14,4 +14,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/diff"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > diff@$VERSION.tar.gz
 exit
