--- a/Devel/flex/build
+++ b/Devel/flex/build
@@ -20,4 +20,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > flex@$VERSION.tar.gz
 exit
