--- a/Devel/muon/build
+++ b/Devel/muon/build
@@ -13,4 +13,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/muon"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > muon@$VERSION.tar.gz
 exit
