--- a/Devel/patch/build
+++ b/Devel/patch/build
@@ -14,4 +14,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/patch"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > patch@$VERSION.tar.gz
 exit
