--- a/Lua/loadkit/build
+++ b/Lua/loadkit/build
@@ -6,4 +6,5 @@ install -Dm644 -t "$DESTDIR/usr/share/lua" loadkit-$VERSION/loadkit.lua
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > loadkit@$VERSION.tar.gz
 exit
