--- a/Lua/lua-cldr/build
+++ b/Lua/lua-cldr/build
@@ -7,4 +7,5 @@ install -Dm644 -t "$DESTDIR/usr/share/lua/cldr/data" cldr-lua-$VERSION/cldr/data
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > lua-cldr@$VERSION.tar.gz
 exit
