--- a/Lua/lua-cliargs/build
+++ b/Lua/lua-cliargs/build
@@ -7,4 +7,5 @@ cp -r lua_cliargs-$VERSION/src/* "$DESTDIR/usr/share/lua"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > lua-cliargs@$VERSION.tar.gz
 exit
