--- a/Lua/lua-epnf/build
+++ b/Lua/lua-epnf/build
@@ -6,4 +6,5 @@ install -Dm644 -t "$DESTDIR/usr/share/lua" lua-luaepnf-$VERSION/src/epnf.lua
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > lua-epnf@$VERSION.tar.gz
 exit
