--- a/Lua/lua-fluent/build
+++ b/Lua/lua-fluent/build
@@ -7,4 +7,5 @@ cp -r fluent-lua-$VERSION/fluent "$DESTDIR/usr/share/lua"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > lua-fluent@$VERSION.tar.gz
 exit
