--- a/Lua/penlight/build
+++ b/Lua/penlight/build
@@ -7,4 +7,5 @@ cp -r Penlight-$VERSION/lua/pl "$DESTDIR/usr/share/lua"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > penlight@$VERSION.tar.gz
 exit
