--- a/Net/ca-certificates/build
+++ b/Net/ca-certificates/build
@@ -4,4 +4,5 @@ install -Dm644 cacert-$VERSION.pem "$DESTDIR/etc/ssl/cert.pem"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > ca-certificates@$VERSION.tar.gz
 exit
