--- a/Python/markupsafe/build
+++ b/Python/markupsafe/build
@@ -12,4 +12,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > markupsafe@$VERSION.tar.gz
 exit
