--- a/System/expat/build
+++ b/System/expat/build
@@ -18,4 +18,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > expat@$VERSION.tar.gz
 exit
