--- a/System/file/build
+++ b/System/file/build
@@ -20,4 +20,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > file@$VERSION.tar.gz
 exit
