--- a/System/libudev-zero/build
+++ b/System/libudev-zero/build
@@ -11,4 +11,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > libudev-zero@$VERSION.tar.gz
 exit
