--- a/System/ncurses/build
+++ b/System/ncurses/build
@@ -21,4 +21,5 @@ find "$DESTDIR" -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > ncurses@$VERSION.tar.gz
 exit
