--- a/System/sqlite/build
+++ b/System/sqlite/build
@@ -24,4 +24,5 @@ find $DESTDIR -type f -name '*.la' -delete
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > sqlite@$VERSION.tar.gz
 exit
