--- a/System/tzdata/build
+++ b/System/tzdata/build
@@ -25,4 +25,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/zdump"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > tzdata@$VERSION.tar.gz
 exit
