--- a/Text/awk/build
+++ b/Text/awk/build
@@ -14,4 +14,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/awk"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > awk@$VERSION.tar.gz
 exit
