--- a/Text/mandoc/build
+++ b/Text/mandoc/build
@@ -25,4 +25,5 @@ find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \; -exec chmod 7
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > mandoc@$VERSION.tar.gz
 exit
