--- a/Text/nextvi/build
+++ b/Text/nextvi/build
@@ -11,4 +11,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/vi"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > nextvi@$VERSION.tar.gz
 exit
