--- a/Text/scdoc/build
+++ b/Text/scdoc/build
@@ -10,4 +10,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/scdoc"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > scdoc@$VERSION.tar.gz
 exit
