--- a/Wayland/libglvnd/build
+++ b/Wayland/libglvnd/build
@@ -13,4 +13,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > libglvnd@$VERSION.tar.gz
 exit
