--- a/Wayland/libxkbcommon/build
+++ b/Wayland/libxkbcommon/build
@@ -27,4 +27,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/xkbcli"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > libxkbcommon@$VERSION.tar.gz
 exit
