--- a/Wayland/pixman/build
+++ b/Wayland/pixman/build
@@ -21,4 +21,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > pixman@$VERSION.tar.gz
 exit
