--- a/Wayland/seatd/build
+++ b/Wayland/seatd/build
@@ -20,4 +20,5 @@ find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > seatd@$VERSION.tar.gz
 exit
