--- a/Wayland/wayland/build
+++ b/Wayland/wayland/build
@@ -21,4 +21,5 @@ strip --strip-unneeded "$DESTDIR/usr/bin/wayland-scanner"
 
 su
 chown -R root:root $DESTDIR
+tar -c $DESTDIR/* | gzip2 > wayland@$VERSION.tar.gz
 exit
