--- a/Text/sed/build
+++ b/Text/sed/build
@@ -1,22 +1,21 @@
 #!/bin/sh -e
 
-xz -cd bsdutils-$VERSION.tar.xz | tar -x
-cd bsdutils-$VERSION/src/sed
+xz -cd sed-$VERSION.tar.xz | tar -x
+cd sed-$VERSION
 
-cp ../../compat/strlcat.c .
-cp ../../compat/strlcpy.c .
-cp ../../include/compat.h .
-cp ../../include/sys/cdefs.h .
+./configure \
+	--prefix=/usr \
+	--bindir=/usr/bin \
+	--mandir=/usr/share/man \
+	--infodir=/usr/share/info \
+	--disable-i18n \
+	--disable-nls
 
-sed -i 's|<sys/cdefs.h>|"cdefs.h"|g' *.c
+make
+make DESTDIR="$DESTDIR" install-strip
 
-$CC -c *.c
-$CC -static *.o -o sed
-
-install -Dm755 -t "$DESTDIR/usr/bin" sed
-install -Dm644 -t "$DESTDIR/usr/share/man/man1" sed.1
-
-strip --strip-unneeded "$DESTDIR/usr/bin/sed"
+rm -rf "$DESTDIR/usr/share/info"
+rmdir "$DESTDIR/usr/var"
 
 su
 chown -R root:root $DESTDIR
