--- a/Archive/pigz/build
+++ b/Archive/pigz/build
@@ -3,14 +3,11 @@
 gzip -cd pigz-$VERSION.tar.gz | tar -x
 cd pigz-$VERSION
 
-$CC -c pigz.c -DNOZOPFLI
-$CC -c yarn.c -DNOZOPFLI
-$CC -c try.c  -DNOZOPFLI
-
+$CC -c *.c -DNOZOPFLI
 $CC -static -o pigz *.o -lz
 
-install -Dm755 -t "$DESTDIR/usr/bin" pigz
-install -Dm644 -t "$DESTDIR/usr/share/man/man1" pigz.1
+install -Dm755 pigz "$DESTDIR/usr/bin/pigz"
+install -Dm644 pigz "$DESTDIR/usr/share/man/man1/pigz.1"
 
 ln -sf pigz "$DESTDIR/usr/bin/gzip"
 strip --strip-unneeded "$DESTDIR/usr/bin/pigz"
