--- a/Devel/bison/build
+++ b/Devel/bison/build
@@ -12,6 +12,8 @@ make
 make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share/info"
+rm -rf "$DESTDIR/usr/share/doc"
+rm -rf "$DESTDIR/usr/share/aclocal"
 
 su
 chown -R root:root $DESTDIR
