--- a/Text/awk/build
+++ b/Text/awk/build
@@ -4,7 +4,7 @@ cd awk.git
 
 sed -i 's/gcc/cc/g' makefile
 
-make CC="$CC" CFLAGS="$CFLAGS -static"
+make CFLAGS="$CFLAGS -static"
 
 install -Dm755 a.out   "$DESTDIR/usr/bin/awk"
 install -Dm644 awk.1   "$DESTDIR/usr/share/man/man1/awk.1" 
